Pop form overflow-y fix

--- a/_sass/_pop-form.scss
+++ b/_sass/_pop-form.scss
@@ -117,7 +117,7 @@
         cursor: pointer;
     }
 
-    @media (max-height: 465px) {
+    @media (max-height: 550px) {
         max-height: 100%;
         overflow-x: hidden;
         overflow-y: scroll;
